--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"><script src="https://kit.fontawesome.com/aaaeb448b7.js" crossorigin="anonymous"></script>
-    <title>GameRoom</title>
+    <title>Game Commerce</title>
 </head>
 <body id="index-page">
     <header  class="top-header" >
@@ -148,12 +147,5 @@
             </div>
         </div>
     </section>
-
-
-
-    
-   
-    <script src="gamesJason.js"></script>
-    <script src="addPromoProducts.js"></script>
 </body>
 </html>
